--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "youtube-moosick",
-  "version": "0.0.0.0.0000",
+  "version": "0.0.0.0.0010",
   "description": "youtube music api",
   "main": "index.js",
   "scripts": {
@@ -29,6 +29,7 @@
   "dependencies": {
     "axios": "^0.21.1",
     "lodash": "^4.17.21",
+    "readdir-enhanced": "^6.0.4",
     "tough-cookie": "^4.0.0"
   }
 }
