Added album parsers

--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@types/node": "^16.6.2",
     "axios": "^0.21.1",
     "lodash": "^4.17.21",
+    "object-scan": "^17.0.0",
     "readdir-enhanced": "^6.0.4",
     "tough-cookie": "^4.0.0"
   }
