--- a/.github/workflows/rollupBuild.yml
+++ b/.github/workflows/rollupBuild.yml
@@ -31,3 +31,5 @@ jobs:
             github-token: ${{ secrets.BUILD_TOKEN }}
             # Specify commit message
             commit-message: "AutoBuild"
+            # Files
+            files: .
