--- a/.github/workflows/rollupBuild.yml
+++ b/.github/workflows/rollupBuild.yml
@@ -12,6 +12,7 @@ jobs:
   rollup-build:
     name: Builds `dist`
     runs-on: ubuntu-latest
+    if: "!contains(github.event.head_commit.message, '[Autobuild-skip-ci]')"
     steps:
       # Gets the latest commit
       - uses: actions/checkout@v1
@@ -30,6 +31,6 @@ jobs:
             # Github Token with commit access
             github-token: ${{ secrets.BUILD_TOKEN }}
             # Specify commit message
-            commit-message: "AutoBuild"
+            commit-message: "AutoBuild-skip-ci"
             # Files
             files: .
