--- a/.github/workflows/rollupBuild.yml
+++ b/.github/workflows/rollupBuild.yml
@@ -30,5 +30,5 @@ jobs:
         uses: actions-js/push@v1.3
         with:
           github_token: ${{ secrets.BUILD_TOKEN }}
-          message: `chore:Autobuild`
+          message: "chore:Autobuild"
 
