--- a/.github/workflows/rollupBuild.yml
+++ b/.github/workflows/rollupBuild.yml
@@ -12,7 +12,7 @@ jobs:
   rollup-build:
     name: Builds `dist`
     runs-on: ubuntu-latest
-    if: "!contains(github.event.head_commit.message, '[chore:Autobuild]')"
+    if: "!contains(github.event.head_commit.message, 'chore:Autobuild')"
     steps:
       # Gets the latest commit
       - uses: actions/checkout@v1
