--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "eslint": "^7.32.0",
     "eslint-config-xo": "^0.38.0",
     "eslint-config-xo-typescript": "^0.44.0",
+    "eslint-plugin-import": "^2.24.2",
     "glob": "^7.1.7",
     "rollup": "^2.56.3",
     "rollup-plugin-delete": "^2.0.0",
