--- a/.github/workflows/tscBuild.yml
+++ b/.github/workflows/tscBuild.yml
@@ -1,4 +1,4 @@
-name: rollup-build
+name: tscBuild
 # You may pin to the exact commit or the version.
 # uses: github-actions-x/commit@5cf7985b07155682f82d02b6c2188d90cebeb0c8
 
@@ -12,7 +12,9 @@ jobs:
   rollup-build:
     name: Builds `dist`
     runs-on: ubuntu-latest
-    if: "!contains(github.event.head_commit.message, 'chore:Autobuild')"
+    env:
+      now: $(date +"%m-%d-%Y %T")
+    if: "!contains(github.event.head_commit.message, '🔨 @')"
     steps:
       # Gets the latest commit
       - uses: actions/checkout@v1
@@ -30,5 +32,5 @@ jobs:
         uses: actions-js/push@v1.3
         with:
           github_token: ${{ secrets.BUILD_TOKEN }}
-          message: "chore:Autobuild"
+          message: "🔨 @ $now"
 
