--- a/package.json
+++ b/package.json
@@ -1,48 +1,62 @@
 {
-  "name": "youtube-moosick",
-  "version": "0.0.0",
-  "description": "youtube music api",
-  "main": "index.js",
-  "type": "module",
-  "scripts": {
-    "test": "node --require @nextools/suppress-experimental-warnings --experimental-json-modules dist/test/index",
-    "dev": "tsc --watch",
-    "build": "tsc --build --clean && tsc"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/EvasiveXkiller/youtube-moosick.git"
-  },
-  "keywords": [
-    "youtube",
-    "musi"
-  ],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/EvasiveXkiller/youtube-moosick/issues"
-  },
-  "homepage": "https://github.com/EvasiveXkiller/youtube-moosick#readme",
-  "devDependencies": {
-    "@nextools/suppress-experimental-warnings": "^0.1.0",
-    "@types/glob": "^7.1.4",
-    "@types/tape": "^4.13.2",
-    "@types/tough-cookie": "^4.0.1",
-    "@typescript-eslint/eslint-plugin": "^4.29.3",
-    "@typescript-eslint/parser": "^4.29.3",
-    "eslint": "^7.32.0",
-    "eslint-config-xo": "^0.38.0",
-    "eslint-config-xo-typescript": "^0.44.0",
-    "eslint-plugin-import": "^2.24.2",
-    "glob": "^7.1.7",
-    "tape": "^5.3.1",
-    "typescript": "^4.3.5"
-  },
-  "dependencies": {
-    "@types/node": "^16.7.2",
-    "axios": "^0.21.1",
-    "object-scan": "^17.0.0",
-    "readdir-enhanced": "^6.0.4",
-    "tough-cookie": "^4.0.0"
-  }
+    "name": "youtube-moosick",
+    "version": "0.0.1",
+    "description": "Unofficial Youtube music API, fully written in TypeScript",
+    "main": "./dist/index.js",
+    "type": "module",
+    "scripts": {
+        "test": "node --require @nextools/suppress-experimental-warnings --experimental-json-modules dist/test/index",
+        "dev": "tsc --watch",
+        "build": "tsc --build --clean && tsc",
+        "lint": "eslint \"**/*.ts\" --quiet"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/EvasiveXkiller/youtube-moosick.git"
+    },
+    "keywords": [
+        "youtube",
+        "music",
+        "youtube-music",
+        "youtube music",
+        "music",
+        "api"
+    ],
+    "author": {
+        "name": "EvasiveXkiller",
+        "url": "https://github.com/EvasiveXkiller"
+    },
+    "contributors": [
+        {
+            "name": "Sxxov",
+            "url": "https://github.com/Sxxov"
+        }
+    ],
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/EvasiveXkiller/youtube-moosick/issues"
+    },
+    "homepage": "https://github.com/EvasiveXkiller/youtube-moosick#readme",
+    "devDependencies": {
+        "@nextools/suppress-experimental-warnings": "^0.1.0",
+        "@types/glob": "^7.1.4",
+        "@types/tape": "^4.13.2",
+        "@types/tough-cookie": "^4.0.1",
+        "@typescript-eslint/eslint-plugin": "^4.29.3",
+        "@typescript-eslint/parser": "^4.29.3",
+        "eslint": "^7.32.0",
+        "eslint-config-xo": "^0.38.0",
+        "eslint-config-xo-typescript": "^0.44.0",
+        "eslint-plugin-import": "^2.24.2",
+        "glob": "^7.1.7",
+        "tape": "^5.3.1",
+        "typescript": "^4.3.5"
+    },
+    "dependencies": {
+        "@types/node": "^16.7.2",
+        "axios": "^0.21.1",
+        "object-scan": "^17.0.0",
+        "readdir-enhanced": "^6.0.4",
+        "tough-cookie": "^4.0.0"
+    }
 }
