--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     },
     "homepage": "https://github.com/EvasiveXkiller/youtube-moosick#readme",
     "devDependencies": {
+        "@microsoft/api-extractor": "^7.18.7",
         "@nextools/suppress-experimental-warnings": "^0.1.0",
         "@types/glob": "^7.1.4",
         "@types/tape": "^4.13.2",
@@ -48,6 +49,7 @@
         "eslint-config-xo": "^0.38.0",
         "eslint-config-xo-typescript": "^0.44.0",
         "eslint-plugin-import": "^2.24.2",
+        "eslint-plugin-tsdoc": "^0.2.14",
         "glob": "^7.1.7",
         "tape": "^5.3.1",
         "typescript": "^4.3.5"
