--- a/tsconfig.json
+++ b/tsconfig.json
@@ -45,7 +45,9 @@
 			"src/index.ts",
 			"src/enums.ts",
 			"src/parsers/index.ts",
+			"src/resources/resultTypes/index.ts",
 			"src/resources/generalTypes/index.ts",
+			"src/resources/errors/index.ts",
 		],
 		"out": "docs"
 	}
