--- a/.github/workflows/tscBuild.yml
+++ b/.github/workflows/tscBuild.yml
@@ -7,9 +7,9 @@ on:
     branches:
       - main
   workflow_dispatch:
-  
+
 jobs:
-  rollup-build:
+  tscBuild:
     name: Builds `dist` and generate `docs`
     runs-on: ubuntu-latest
     if: "!contains(github.event.head_commit.message, '🔨 @ ')"
