--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -33,4 +33,6 @@ jobs:
           npm run test
       # Check if all Markdown links work
       - uses: gaurav-nelson/github-action-markdown-link-check@v1
+        with:
+
 
