--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -6,6 +6,9 @@ on:
   push:
     branches:
       - main
+  pull_request:
+    branches:
+      - main
   workflow_dispatch:
 
 jobs:
@@ -31,7 +34,5 @@ jobs:
       - name : Run all tests
         run: |
           npm run test
-      # Check if all Markdown links work
-      - uses: gaurav-nelson/github-action-markdown-link-check@v1
 
 
