Disable test keepalive & pipe std output to debug console

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -47,8 +47,8 @@
 			"args": [
 				"/t",
 				"${fileBasenameNoExtension}",
-				"/k"
-			]
+			],
+			"outputCapture": "std"
 		}
 	],
 	"inputs": [
