--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "youtube-moosick",
     "version": "0.2.0",
     "description": "Unofficial Youtube music API, fully written in TypeScript",
-    "main": "./dist/index.js",
+    "main": "./dist/cjs/index.js",
     "module": "./dist/esm/index.js",
     "typings": "./dist/cjs/index.d.ts",
     "type": "module",
