--- a/package.json
+++ b/package.json
@@ -6,12 +6,19 @@
     "module": "./dist/esm/index.js",
     "typings": "./dist/cjs/index.d.ts",
     "type": "module",
+    "exports": {
+        ".": {
+            "import": "./dist/esm/index.js",
+            "require": "./dist/cjs/index.js"
+        }
+    },
     "scripts": {
-        "test": "node --require @nextools/suppress-experimental-warnings --experimental-json-modules dist/esm/test/index",
+        "test": "node --require @nextools/suppress-experimental-warnings --experimental-json-modules dist/test/test/index",
         "dev": "tsc --watch",
-        "build" : "npm run build:cjs && npm run build:esm",
-        "build:cjs": "tsc --outDir dist/cjs",
-        "build:esm": "tsc --outDir dist/esm --module esnext",
+        "build" : "npm run build:cjs && npm run build:esm && npm run build:test",
+        "build:cjs": "tsc --build tsconfig.cjs.json --clean && tsc --build tsconfig.cjs.json && node -e require('fs').writeFileSync('./dist/cjs/package.json',JSON.stringify({type:'commonjs'}))",
+        "build:esm": "tsc --build tsconfig.esm.json --clean && tsc --build tsconfig.esm.json",
+        "build:test": "tsc --build tsconfig.test.json --clean && tsc --build tsconfig.test.json",
         "lint": "eslint \"**/*.ts\" --quiet",
         "doc": "typedoc --excludePrivate --excludeProtected --excludeInternal --readme none",
         "docbuild": "npm run build && npm run doc"
