--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,7 @@
 		],
 		"esModuleInterop": true,
 		"isolatedModules": true,
-		"module": "esnext",
+		// "module": "esnext",
 		"target": "esnext",
 		"sourceMap": true,
 		"moduleResolution": "node",
@@ -36,7 +36,7 @@
 		"importsNotUsedAsValues": "error",
 		"experimentalDecorators": true,
 		"noImplicitOverride": true,
-		"outDir": "dist",
+		// "outDir": "dist",
 		"declaration": true,
 		"declarationMap": true
 	},
