--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
         "test": "node --require @nextools/suppress-experimental-warnings --experimental-json-modules dist/test/test/index",
         "dev": "tsc --watch",
         "build" : "npm run build:cjs && npm run build:esm && npm run build:test",
-        "build:cjs": "tsc --build tsconfig.cjs.json --clean && tsc --build tsconfig.cjs.json && node -e require('fs').writeFileSync('./dist/cjs/package.json',JSON.stringify({type:'commonjs'}))",
+        "build:cjs": "tsc --build tsconfig.cjs.json --clean && tsc --build tsconfig.cjs.json && node -e \"require('fs').writeFileSync('./dist/cjs/package.json',JSON.stringify({type:'commonjs'}))\"",
         "build:esm": "tsc --build tsconfig.esm.json --clean && tsc --build tsconfig.esm.json",
         "build:test": "tsc --build tsconfig.test.json --clean && tsc --build tsconfig.test.json",
         "lint": "eslint \"**/*.ts\" --quiet",
