--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,7 +26,7 @@
 		"target": "esnext",
 		"sourceMap": true,
 		"moduleResolution": "node",
-		"noEmit": false,
+		"noEmit": true,
 		"strict": true,
 		"skipLibCheck": true,
 		"forceConsistentCasingInFileNames": true,
