--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "youtube-moosick",
-    "version": "0.3.0",
+    "version": "0.3.0-rc1",
     "description": "Unofficial Youtube music API, fully written in TypeScript",
     "main": "./dist/cjs/index.js",
     "module": "./dist/esm/index.js",
@@ -73,7 +73,7 @@
     "dependencies": {
         "axios": "^0.27.2",
         "eslint": "^7.32.0",
-        "object-scan": "^18.3.11",
+        "object-scan": "^17.0.1",
         "readdir-enhanced": "^6.0.4",
         "tough-cookie": "^4.0.0"
     }
